--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,9 +2,9 @@
   "name": "nifty-terminal",
   "version": "1.0.0",
   "scripts": {
-    "dev":   "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev":     "vite",
+    "build":   "npx vite build",
+    "preview": "npx vite preview"
   },
   "dependencies": {
     "react":     "^18.3.1",
