--- a/render.yaml
+++ b/render.yaml
@@ -4,12 +4,12 @@ services:
     env: python
     region: singapore
     pythonVersion: "3.11.8"
-    buildCommand: |
-      pip install -r requirements.txt
-      curl -fsSL https://deb.nodesource.com/setup_20.x | bash -
-      apt-get install -y nodejs
-      cd frontend && npm install && npm run build
-    startCommand: cd backend && uvicorn server:app --host 0.0.0.0 --port $PORT
+    buildCommand: pip install -r requirements.txt && cd frontend && npm install && npx vite build
+    startCommand: cd backend && python -m uvicorn server:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
         value: "3.11.8"
+      - key: DB_PATH
+        value: "/tmp/paper_trading.db"
+      - key: LOG_FILE
+        value: "/tmp/nifty_terminal.log"
